tests/invalid/undef_lambda_mode.err_exp
undef_lambda_mode.m:010: In mode declaration for lambda expression:
undef_lambda_mode.m:010:   error: undefined mode `junk'/0.
